@@ -913,6 +913,10 @@ h2 .show-infos {
 		}
 	}
 
+	.column-cs_replacement {
+		width: 10%;
+	}
+
 	td.cs_replacement {
 		/* do not display sidebars that are not replaced */
 		.def,
