@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 
 3.0.6 ( 2017-0x-xx )
+- Added width to "Custom Sidebars" column on entries list screen to avoid uncontroled column width.
 
 3.0.5 ( 2017-04-25 )
 - Improved columns display on post list screen - now "Custom Sidebars" column is hidden by default.
